--- a/TestTask/TestTaskWebAPI/appsettings.Development.json
+++ b/TestTask/TestTaskWebAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AppDb": "Server=(localdb)\\mssqllocaldb;Database=test_task;Trusted_connection=True;"
   }
 }
