Add Projects controller

--- a/TestTask/TestTaskWebAPI/TestTaskWebAPI.csproj
+++ b/TestTask/TestTaskWebAPI/TestTaskWebAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -13,11 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\TestTaskData\TestTaskData.csproj" />
+    <ProjectReference Include="..\TestTaskServices\TestTaskServices.csproj" />
   </ItemGroup>
 
 </Project>
